--- a/dialog_1.ui
+++ b/dialog_1.ui
@@ -35,8 +35,8 @@
   <widget class="QSplitter" name="splitter_2">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>30</y>
+     <x>30</x>
+     <y>0</y>
      <width>445</width>
      <height>431</height>
     </rect>
@@ -83,6 +83,32 @@
      <string/>
     </property>
    </widget>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>440</y>
+     <width>231</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Диаметр шнека = </string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>470</y>
+     <width>391</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Угол подъема винта шнека = </string>
+   </property>
   </widget>
  </widget>
  <resources/>
