--- a/dialog.ui
+++ b/dialog.ui
@@ -6,61 +6,231 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>485</width>
-    <height>255</height>
+    <width>593</width>
+    <height>238</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>450</width>
-    <height>150</height>
+    <width>593</width>
+    <height>238</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>637</width>
+    <height>238</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>160</y>
-     <width>83</width>
-     <height>29</height>
+     <x>139</x>
+     <y>11</y>
+     <width>401</width>
+     <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>ОК</string>
+    <string>Определим допустимую максимальную толщину стружки</string>
    </property>
   </widget>
-  <widget class="QSplitter" name="splitter">
+  <widget class="QPushButton" name="pushButton_3">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>30</y>
-     <width>391</width>
-     <height>121</height>
+     <x>494</x>
+     <y>200</y>
+     <width>80</width>
+     <height>26</height>
     </rect>
    </property>
-   <property name="orientation">
-    <enum>Qt::Vertical</enum>
+   <property name="maximumSize">
+    <size>
+     <width>16777215</width>
+     <height>26</height>
+    </size>
    </property>
-   <widget class="QLabel" name="label">
-    <property name="text">
-     <string>Допустимая максимальная толщина стружки =</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="text">
-     <string>Средняя толщина стружки =</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_3">
-    <property name="text">
-     <string>Средняя оптимальная ширина стружки для забойных резцов =</string>
-    </property>
-   </widget>
+   <property name="text">
+    <string>Далее</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>200</y>
+     <width>80</width>
+     <height>26</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>132</width>
+     <height>26</height>
+    </size>
+   </property>
+   <property name="text">
+    <string>Расчитать</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>42</y>
+     <width>560</width>
+     <height>103</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="maximumSize">
+       <size>
+        <width>432</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Введите конструктивный вылет забойного резца в сантиметрах</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QDoubleSpinBox" name="doubleSpinBox">
+      <property name="maximumSize">
+       <size>
+        <width>119</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="decimals">
+       <number>5</number>
+      </property>
+      <property name="maximum">
+       <double>99999999999999.000000000000000</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_3">
+      <property name="maximumSize">
+       <size>
+        <width>432</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Введите угол установки забойного резца к поверхности резания в градусах</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
+      <property name="maximumSize">
+       <size>
+        <width>119</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="decimals">
+       <number>5</number>
+      </property>
+      <property name="maximum">
+       <double>99999999999999.000000000000000</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_4">
+      <property name="maximumSize">
+       <size>
+        <width>432</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Введите коэффициент вылета резца</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QDoubleSpinBox" name="doubleSpinBox_3">
+      <property name="maximumSize">
+       <size>
+        <width>119</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="decimals">
+       <number>5</number>
+      </property>
+      <property name="maximum">
+       <double>99999999999999.000000000000000</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="layoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>150</y>
+     <width>335</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout_2">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_5">
+      <property name="maximumSize">
+       <size>
+        <width>432</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Допустимая максимальная толщина стружки = </string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_6">
+      <property name="maximumSize">
+       <size>
+        <width>432</width>
+        <height>16777215</height>
+       </size>
+      </property>
+      <property name="text">
+       <string>Средняя толщина стружки = </string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>doubleSpinBox</tabstop>
+  <tabstop>doubleSpinBox_2</tabstop>
+  <tabstop>doubleSpinBox_3</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
