--- a/dialogcorner.ui
+++ b/dialogcorner.ui
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog_2</class>
- <widget class="QDialog" name="Dialog_2">
+ <class>DialogCorner</class>
+ <widget class="QDialog" name="DialogCorner">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>322</width>
-    <height>335</height>
+    <width>265</width>
+    <height>296</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>265</width>
+    <height>296</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -16,20 +22,20 @@
   <widget class="QTextBrowser" name="textBrowser">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>10</y>
-     <width>211</width>
-     <height>201</height>
+     <x>10</x>
+     <y>40</y>
+     <width>241</width>
+     <height>181</height>
     </rect>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>290</y>
-     <width>83</width>
-     <height>29</height>
+     <x>100</x>
+     <y>260</y>
+     <width>75</width>
+     <height>24</height>
     </rect>
    </property>
    <property name="text">
@@ -39,14 +45,14 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>220</y>
-     <width>281</width>
-     <height>61</height>
+     <x>60</x>
+     <y>10</y>
+     <width>151</width>
+     <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string/>
+    <string>Угол наклона резца</string>
    </property>
   </widget>
  </widget>
