--- a/errordialog.ui
+++ b/errordialog.ui
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog_3</class>
- <widget class="QDialog" name="Dialog_3">
+ <class>ErrorDialog</class>
+ <widget class="QDialog" name="ErrorDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>321</width>
-    <height>104</height>
+    <width>383</width>
+    <height>116</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>383</width>
+    <height>116</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
@@ -16,22 +22,22 @@
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>70</y>
+     <x>160</x>
+     <y>80</y>
      <width>75</width>
      <height>24</height>
     </rect>
    </property>
    <property name="text">
-    <string>Cохранить</string>
+    <string>ОК</string>
    </property>
   </widget>
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>10</y>
-     <width>301</width>
+     <x>20</x>
+     <y>20</y>
+     <width>351</width>
      <height>50</height>
     </rect>
    </property>
@@ -39,44 +45,52 @@
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
-       <string>Укажите какой ход винта</string>
+       <string>Введите первый шаг резания</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
-     <widget class="QComboBox" name="comboBox">
+     <widget class="QDoubleSpinBox" name="doubleSpinBox">
       <property name="maximumSize">
        <size>
-        <width>124</width>
+        <width>100</width>
         <height>16777215</height>
        </size>
       </property>
-      <item>
-       <property name="text">
-        <string>per - пременный</string>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>post - постоянный</string>
-       </property>
-      </item>
+      <property name="decimals">
+       <number>5</number>
+      </property>
+      <property name="maximum">
+       <double>10000000000000000000.000000000000000</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
+      </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
-       <string>Укажите высоту погрузки</string>
+       <string>Введите крайний шаг резания </string>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
-     <widget class="QDoubleSpinBox" name="doubleSpinBox">
+     <widget class="QDoubleSpinBox" name="doubleSpinBox_2">
       <property name="maximumSize">
        <size>
-        <width>124</width>
+        <width>100</width>
         <height>16777215</height>
        </size>
+      </property>
+      <property name="decimals">
+       <number>5</number>
+      </property>
+      <property name="maximum">
+       <double>10000000000000000000.000000000000000</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
       </property>
      </widget>
     </item>
